<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- IMAGE -->
        <ImageView
            android:contentDescription="@string/details"
            android:id="@+id/imgItem"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"/>

        <!-- TITLE -->
        <TextView
            android:id="@+id/txtTitle"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- CATEGORY -->
        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- NAME -->
        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- PHONE -->
        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- DESCRIPTION -->
        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- DATE -->
        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- LOCATION -->
        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- BUTTONS -->
        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/remove_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/removed"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>